# hydra

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  KEYS  NOTICE  PLAN-issue-180.md  README.md  SECURITY.md  bootstrapping-clojure-investigation.md  build.gradle  debug_annotation.py  debug_haskell.hs  debug_p2j.py  debug_p2j2.py  debug_p2j_recursion.py  debug_recursion.py  docs-migration-checklist.md  feature_126_typescript_plan.md  feature_223_java_names-plan.md  feature_278_lisp.md  feature_291_validation-plan.md  hydra.cabal  hydra.json  java-partialvisitor-codegen-bug.md  package.yaml  pixi.toml  settings.gradle  stack.yaml
bindings/python/hydra-tinkerpop/: .gitignore  README.md  pyproject.toml
bindings/python/hydra-tinkerpop/test/: test_coder_unit.py
hydra-ext/demos/bootstrapping/resources/python/: pyproject.toml
hydra-python/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
hydra-python/src/gen-main/python/hydra/: __init__.py  accessors.py  adapt.py  analysis.py  annotations.py  arity.py  ast.py  checking.py  classes.py  code_generation.py  codegen.py  coder_utils.py  coders.py  compute.py  constants.py  constraints.py  context.py  core.py  core_encoding.py  decode.py  decoding.py  dependencies.py  encoding.py  environment.py  error.py  errors.py  formatting.py  functions.py  grammar.py  grammars.py  graph.py  hoisting.py  inference.py  json.py  languages.py  lexical.py  literals.py  mantle.py  messages.py  module.py  (+31 more)
hydra-python/src/gen-main/python/hydra/adapt/: literals.py  modules.py  simple.py  terms.py  utils.py
hydra-python/src/gen-main/python/hydra/decode/: accessors.py  ast.py  classes.py  coders.py  compute.py  constraints.py  context.py  core.py  errors.py  grammar.py  json.py  module.py  packaging.py  parsing.py  paths.py  phantoms.py  query.py  relational.py  tabular.py  testing.py  topology.py  typing.py  util.py  variants.py  workflow.py
hydra-python/src/gen-main/python/hydra/dsl/: accessors.py  coders.py  context.py  core.py  error.py  errors.py  grammar.py  graph.py  module.py  packaging.py  paths.py  query.py  testing.py  util.py  variants.py
hydra-python/src/gen-test/python/: conftest.py
hydra-python/src/gen-test/python/hydra/: __init__.py
hydra-python/src/hydra/: tools.py
hydra-python/src/hydra/dsl/: base.py  expect.py  flows.py  grammar.py  graph.py  literal_types.py  literals.py  phantom_literals.py  prims.py  python.py  terms.py  types.py
hydra-python/src/hydra/lib/: maps.py
hydra-python/src/hydra/sources/: libraries.py
hydra-python/src/main/python/hydra/: __init__.py  accessors.py  annotations.py  arity.py  ast.py  bootstrap.py  checking.py  classes.py  coders.py  compute.py  constants.py  constraints.py  core.py  decoding.py  encoding.py  formatting.py  generation.py  grammar.py  grammars.py  graph.py  hoisting.py  inference.py  json.py  languages.py  lexical.py  literals.py  mantle.py  meta.py  module.py  monads.py  names.py  parsers.py  parsing.py  phantoms.py  query.py  reduction.py  reflect.py  relational.py  rewriting.py  schemas.py  (+14 more)
hydra-python/src/main/python/org/: __init__.py
hydra-python/src/test/python/: _test_graph_builder.py  conftest.py  kernel_bindings.py  test_generated_code.py  test_grammar.py  test_json.py  test_lazy_flow_evaluation.py  test_python.py  test_suite_runner.py  test_summary_report.py
hydra-python/tests/: conftest.py  test_grammar.py  test_json.py
(+30300 files in other folders)
