[project]
name = "hydra"
version = "0.14.1"
description = "Graph programming language (bootstrapped)"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
test = ["pytest>=8.3.4"]

[tool.pytest.ini_options]
pythonpath = [
    "src/main/python",
    "src/gen-main/python",
    "src/gen-test/python",
    "src/test/python"
]
testpaths = [
    "src/test/python",
    "src/gen-test/python/generation"
]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/main/python/hydra",
    "src/gen-main/python/hydra"
]
